# auto-update

./: .gitignore  LICENSE  README.md  TODO.md  main.py  pyproject.toml  update.py
src/auto_update/: __init__.py  update.py
